--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "3.0.0",
   "description": "フロントエンド開発の効率をあげるフルスタックテンプレート",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "co": "^4.6.0"
+  },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "babel-core": "^6.5.2",
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.3",
+    "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "browser-sync": "^2.11.1",
     "connect-modrewrite": "^0.8.5",
