--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
+  ]
 }
